--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -13,7 +13,7 @@ jobs:
       with:
         username: ${{ secrets.HARBOR_USERNAME }}
         password: ${{ secrets.HARBOR_PASSWORD }}
-        repository: ${{ dkr-dsg.ac.upc.edu/harbor/tfg_angel }}
+        repository: dkr-dsg.ac.upc.edu/harbor/tfg_angel
     
     - name: build image and push to harbor
       uses: docker/build-push-action@v1
