--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -9,7 +9,7 @@ jobs:
       uses: actions/checkout@master
     
     - name: Login to Harbor registry
-      uses: docker/login-actions@v2
+      uses: docker/login-action@v2
       with:
         username: ${{ secrets.HARBOR_USERNAME }}
         password: ${{ secrets.HARBOR_PASSWORD }}
