Nueva correccion CI server 5

--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -20,7 +20,7 @@ jobs:
       with: 
         path: /server
         push: true
-        tags: fl-server:latest
+        tags: fl-server
         tag_with_ref: true
         tag_with_sha: true 
        
