--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -13,22 +13,40 @@ jobs:
       with:
         username: ${{ secrets.HARBOR_USERNAME }}
         password: ${{ secrets.HARBOR_PASSWORD }}
-        registry: dkr-dsg.ac.upc.edu/harbor/tfg_angel
+        registry: dkr-dsg.ac.upc.edu/tfg_angel
     
     - name: build image 
       uses: docker/build-push-action@v2
       with: 
         file: ./server/Dockerfile
-        outputs: type=oci, dest= /
-        tag: fl-server
+        outputs: type=docker, dest= /tmp/myimage.tar
+        tag: fl-server:latest
 
-    - name: running tag manually
-      run: |
-        docker tag fl-server dkr-dsg.ac.upc.edu/harbor/tfg_angel
+    - name: Upload artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: myimage
+        path: /tmp/myimage.tar
 
-    - name: running push manually
-      run: |
-        docker push dkr-dsg.ac.upc.edu/harbor/tfg_angel
+  use:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: myimage
+          path: /tmp
+
+      - name: Load Docker image
+        run: |
+          docker load --input /tmp/myimage.tar
+          docker image ls -a
+          docker tag fl-server dkr-dsg.ac.upc.edu/tfg_angel/flserver
+          docker push dkr-dsg.ac.upc.edu/tfg_angel/fl-server
         
 
          
