--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -1,7 +1,7 @@
 on: push
 name: server_integration
 jobs: 
-  integration: 
+  just-build: 
     name: deploy_server_to_cluster
     runs-on: ubuntu-latest
     steps:
@@ -30,7 +30,7 @@ jobs:
 
   use:
     runs-on: ubuntu-latest
-    needs: build
+    needs: just-build
     steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
