--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -1,53 +1,25 @@
 on: push
 name: server_integration
 jobs: 
-  just-build: 
+  integration: 
     name: deploy_server_to_cluster
     runs-on: ubuntu-latest
     steps:
     - name: Checkout repo 
-      uses: actions/checkout@master
+      uses actions/checkout@master
     
-    - name: Login to Harbor registry
+    - name: Login to DockerHub
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.HARBOR_USERNAME }}
-        password: ${{ secrets.HARBOR_PASSWORD }}
-        registry: dkr-dsg.ac.upc.edu/tfg_angel
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        repository: flnetwork-registry
     
     - name: build image 
       uses: docker/build-push-action@v2
-      with: 
-        file: ./server/Dockerfile
-        outputs: type=docker, dest= ./server/myimage.tar
-        tag: fl-server:latest
-
-    - name: Upload artifact
-      uses: actions/upload-artifact@v2
       with:
-        name: myimage
-        path: /server/myimage.tar
-
-  use:
-    runs-on: ubuntu-latest
-    needs: just-build
-    steps:
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Download artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: myimage
-          path: /server
-
-      - name: Load Docker image
-        run: |
-          docker load --input /server/myimage.tar
-          docker image ls -a
-          docker tag fl-server dkr-dsg.ac.upc.edu/tfg_angel/flserver
-          docker push dkr-dsg.ac.upc.edu/tfg_angel/fl-server
-        
+        file: ./server/Dockerfile
+        tag: fl-server:latest         
 
          
        
