--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout repo 
-      uses actions/checkout@master
+      uses: actions/checkout@master
     
     - name: Login to DockerHub
       uses: docker/login-action@v2
