--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -13,7 +13,7 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: flnetwork-registry
+        registry: flnetwork-registry
     
     - name: build image 
       uses: docker/build-push-action@v2
