--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -8,18 +8,20 @@ jobs:
     - name: Checkout repo 
       uses: actions/checkout@master
     
-    - name: Login to DockerHub
+    - name: Login to Harbor registry
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWD }}
-        registry: flnetwork-registry
+        username: ${{ secrets.HARBOR_USERNAME }}
+        password: ${{ secrets.HARBOR_PASSWORD }}
+        registry: dkr-dsg.ac.upc.edu/harbor/tfg_angel
     
-    - name: build image 
+    - name: build image and push to harbor
       uses: docker/build-push-action@v2
-      with:
-        file: ./server/Dockerfile
-        tag: fl-server:latest         
+      with: 
+        dockerfile: ./server/Dockerfile
+        push: true
+        tags: fl-server
+    
 
          
        
