--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -18,7 +18,7 @@ jobs:
     - name: build image and push to harbor
       uses: docker/build-push-action@v2
       with: 
-        dockerfile: ./server/Dockerfile
+        file: ./server/Dockerfile
         push: true
         tags: fl-server
     
