--- a/.github/workflows/pushdockerhub.yaml
+++ b/.github/workflows/pushdockerhub.yaml
@@ -13,13 +13,16 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWD }}
-    
-    - name: build image and push to dockerhub
-      uses: docker/build-push-action@v2
+
+    - name: build image and not push to dockerhub
+      uses: docker/build-push-action@v3
       with: 
         file: ./server/Dockerfile
-        push: true
+        push: false
         tags: fl-server
+
+    - name: tag manually and push
+      run: echo 'Done'
     
 
          
