--- a/.github/workflows/pushdockerhub.yaml
+++ b/.github/workflows/pushdockerhub.yaml
@@ -11,14 +11,12 @@ jobs:
     - name: Login to Docker registry
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWD }}
+        username: ${{ secrets.HARBOR_USERNAME }}
+        password: ${{ secrets.HARBOR_PASSWORD }}
 
-    - name: build and tag image 
-      run: docker build -t angelmarques/flnetwork-registry:fl-server -f ./server/Dockerfile .
-
-    - name: push to dockerhub
-      run: docker push angelmarques/flnetwork-registry:fl-server 
+    - name: build, tag and push image manually 
+      run: docker build -t dkr-dsg.ac.upc.edu/tfg_angel/fl-server:latest -f ./server/Dockerfile .
+           docker push dkr-dsg.ac.upc.edu/tfg_angel/fl-server:latest
  
     
 
