--- a/.github/workflows/pushdockerhub.yaml
+++ b/.github/workflows/pushdockerhub.yaml
@@ -13,6 +13,7 @@ jobs:
       with:
         username: ${{ secrets.HARBOR_USERNAME }}
         password: ${{ secrets.HARBOR_PASSWORD }}
+        registry: dkr-dsg.ac.upc.edu/harbor/tfg_angel
 
     - name: build, tag and push image manually 
       run: docker build -t dkr-dsg.ac.upc.edu/tfg_angel/fl-server:latest -f ./server/Dockerfile .
