--- a/.github/workflows/pushdockerhub.yaml
+++ b/.github/workflows/pushdockerhub.yaml
@@ -11,13 +11,12 @@ jobs:
     - name: Login to Docker registry
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.HARBOR_USERNAME }}
-        password: ${{ secrets.HARBOR_PASSWORD }}
-        registry: dkr-dsg.ac.upc.edu/harbor/tfg_angel
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWD }}
 
     - name: build, tag and push image manually 
-      run: docker build -t dkr-dsg.ac.upc.edu/tfg_angel/fl-server:latest -f ./server/Dockerfile .
-           docker push dkr-dsg.ac.upc.edu/tfg_angel/fl-server:latest
+      run: docker build -t angelmarques/flnetwork-registry:fl-server -f ./server/Dockerfile .
+           docker push angelmarques/flnetwork-registry:fl-server
  
     
 
