prueba sin push 11

--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -17,8 +17,8 @@ jobs:
     
     - name: build, tag and push image manually
       run: |
-            docker build -t dkr-dsg.ac.upc.edu/harbor/tfg_angel/fl-server:latest -f ./server/Dockerfile .
-            docker push dkr-dsg.ac.upc.edu/harbor/tfg_angel/fl-server:latest
+            docker build -t dkr-dsg.ac.upc.edu/tfg_angel/fl-server:latest -f ./server/Dockerfile .
+            docker push dkr-dsg.ac.upc.edu/tfg_angel/fl-server:latest
     
 
          
