--- a/.github/workflows/pushdockerhub.yaml
+++ b/.github/workflows/pushdockerhub.yaml
@@ -16,15 +16,15 @@ jobs:
 
     - name: build, tag and push image manually 
       run: |
-           docker build -t angelmarques/flnetwork-registry:fl-server -f ./server/Dockerfile ./server
-           docker push angelmarques/flnetwork-registry:fl-server
+           docker build -t angelmarques/flnetwork-registry/fl-server:latest -f ./server/Dockerfile ./server
+           docker push angelmarques/flnetwork-registry/fl-server:latest
 
     - name: deploy to cluster
       uses: steebchen/kubectl@master
       env: 
         KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}  
       with:
-        args: set image --record deployment.apps/serverdeployment server-01=angelmarques/flnetwork-registry:fl-server
+        args: set image --record deployment.apps/serverdeployment server-01=angelmarques/flnetwork-registry/fl-server:latest
 
     - name: verify deployment
       uses: steebchen/kubectl@master
