--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -1,7 +1,7 @@
 on: push
 name: server_integration
 jobs: 
-  integration: 
+  integrationn: 
     name: deploy_server_to_cluster
     runs-on: ubuntu-latest
     steps:
