--- a/k3s/client19.yaml
+++ b/k3s/client19.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: client19
-        image: dkr-dsg.ac.upc.edu/tfg_angel/fl-client
+        image: dkr-dsg.ac.upc.edu/tfg_angel/fl-client:latest
         env:
         - name: CLIENT_URL
           value: 'http://10.43.231.160:5000'
