--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -15,7 +15,8 @@ RUN pip install torch torchvision \
 && pip install fastai \
 && pip install python-dotenv \
 && pip install aiohttp[speedups] \
-&& pip install flask
+&& pip install flask \
+&& pip install kubernetes
 
 RUN apt-get purge -y --auto-remove build-essential
 
